# edgework

./: .deepsource.toml  .gitignore  CHANGELOG.md  README.md  VERSION_ROADMAP.md  current_packages.txt  demo.py  docs.py  get_teams.py  mkdocs.yml  pyproject.toml  requirements.txt  scratch.py  test_edgework_schedule.py  test_schedule_implementation.py
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  publish.yml  python-test.yml
docs/: changelog.md  contributing.md  index.md
docs/api/: client.md  games.md  nhl-apis.md  players.md  schedule.md  stats.md  teams.md
docs/examples/: advanced.md  basic-usage.md  patterns.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
edgework/: __init__.py  const.py  edgework.py  edgework_fixed.py  endpoints.py  errors.py  fetch_data.py  http_client.py  utilities.py
edgework/.cache/: teams.json
edgework/clients/: draft_client.py  game_client.py  glossary_client.py  network_client.py  player_client.py  playoff_client.py  playoffs_client.py  schedule_client.py  season_client.py  shift_client.py  standings_client.py  stats_client.py  team_client.py  utility_client.py
edgework/models/: SkaterStats.py  __init__.py  base.py  draft.py  game.py  glossary.py  (+17 more)
tests/: test_draft.py  test_edgework.py  test_game.py  test_game_client.py  test_games.py  test_glossary.py  test_http_client.py  test_play_by_play.py  test_player.py  test_player_client.py  test_player_stats.py  test_players.py  test_prospect.py  test_remaining_endpoints.py  test_schedule.py  test_standings.py  test_stats.py  test_teams.py
